[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/npc/Npc.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main/NPC/NPC-Village-Lady-02-Idle-24x24.png" type="Texture" id=2]
[ext_resource path="res://scripts/management/npc.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 9.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00487071, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28.5, 11.25 )

[node name="VilageLady" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Texture" parent="." index="0"]
texture = ExtResource( 2 )
hframes = 2
vframes = 2

[node name="Collision" parent="." index="1"]
visible = false
position = Vector2( 1, 2.5 )
shape = SubResource( 1 )

[node name="Animation" parent="." index="2"]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="CollisionShape2D" parent="InteractableArea" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="QuestMark" parent="." index="4"]
position = Vector2( 1, -18 )

[node name="Animation" parent="QuestMark" index="0"]
autoplay = "idle"

[connection signal="body_entered" from="InteractableArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="InteractableArea" to="." method="_on_body_exited"]
